Big re-write of all build and run tasks.
Do `lein george` for list of available options.