@@ -5,83 +5,21 @@
 
 (ns leiningen.jre
   (:require
-    [leiningen.core.eval :refer [sh]]
-    [leiningen.george :as g]
-    [clojure.java.io :as cio]
-    [environ.core :refer [env]])
-  (:import
-    [java.io File]))
+    [leiningen.george.core :as g]))
 
 
-(def JRE_D  (cio/file (:user-dir env) "target" "jre"))
-(def JAVA_F (cio/file JRE_D "bin" (if (g/windows?) "java.exe" "java")))
+(defn ^:pass-through-help jre
+  "Call 'java' (in custom JRE) with args.  ...
 
+If the first arg is ':jar' ':jpms', the built jar or jpms is run with the remaining args.
 
-(defn- assert-jre []
-  (assert (.exists JRE_D) (format "'%s' not found. Have you done 'lein jre'?" JRE_D)))
+Examples:
+lein jre -version
+lein jre --list-modules
+lein jre :jar
+lein jre :jar :help
+lein jre :jpms"
 
-
-(defn- assert-java []
-  (assert-jre)
-  (assert (.exists ^File JAVA_F) (format "'%s' not found. Have you done 'lein jre'?" JAVA_F)))
-
-
-(defn- java 
-  "Call 'java' on the custom built JRE
-
-Try 'lein jre java -version' 
- or 'lein jre java --list-modules'"
-  [args]
-  (g/assert-project)
-  (assert-java)
-  (apply sh (cons (str JAVA_F) args)))
-
-
-;; https://jaxenter.com/jdk-9-replace-permit-illegal-access-134180.html
-(defn- deployable 
-  "Run the built deployable on the JRE"
-  [args]
-  (g/assert-deployable)
-  (java (concat [;"--illegal-access=permit"
-                 "--illegal-access=warn"
-                 ;"--illegal-access=debug"
-                 "-jar" (g/deployable-jar-path)] args)))
-
-
-(defn- jpms
-  "Run the built deployable on the JRE as JPMS"
-  [args]
-  (g/assert-jpms)
-  (java (concat [ "--module-path" (g/deployable-jar-path)
-                 "--module" "no.andante.george.Launch"]
-                args)))
-
-
-(defn jre- []
-  (g/assert-project)
-  (g/assert-java11)
-  (let [modules-str (apply str (interpose "," (map name (g/modules))))]
-    ;(prn modules-str)
-    (g/clean 'target/jre)
-    (g/jlink ["--output" "target/jre"
-              "--compress=2"
-              "--no-header-files"
-              "--add-modules" modules-str])
-    (g/clean "target/jre/legal")
-    (java ["--list-modules"])))
-
-
-(defn jre
-  "Build a custom JRE
-
-Modules to include are specified in project.clj -> :jre -> :modules
-  
-Do 'lein help jre java' for tips on testing."
-  {:subtasks [#'java #'deployable #'jpms]}
-  [project & [subtask & args]]
+  [project & args]
   (binding [g/*project* project]
-    (case subtask
-      "java"       (java args)
-      "deployable" (deployable args)
-      "jpms"       (jpms args)
-      (jre-))))
+    (g/run-jre args)))
